--- a/training.html
+++ b/training.html
@@ -27,19 +27,26 @@
 		</div>
 	</div>
 
-	<nav class="navbar " style="background-color:red">
-
+	<nav class="navbar navbar-inverse" style="background-color:red; border: none;">
 		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html" style="color: white"> Home</a></li>
+					<li><a href="about.html" style="color: white">About</a></li>
+					<li><a href="services.html" style="color: white">Services</a></li>
+					<li><a href="training.html" style="color: white">Training</a></li>
+					<li><a href="contact.html" style="color: white">Contact</a></li>
+				</ul>
 
-			<ul class="nav navbar-nav">
-				<li><a href="index.html" style="color: white"> Home</a></li>
-				<li><a href="about.html" style="color: white">About</a></li>
-				<li><a href="services.html" style="color: white">Services</a></li>
-				<li><a href="training.html" style="color: white">Training</a></li>
-				<li><a href="contact.html" style="color: white">Contact</a></li>
-			</ul>
+			</div>
 		</div>
-
 	</nav>
 
 	<div class="container">
@@ -112,5 +119,6 @@
 
 
 </body>
+
 
 </html>
